# newrelic-bedrock-observability

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: README.md  example.py
newrelic_bedrock_observability/: __init__.py  bedrock_monitoring.py  build_events.py  error_handling_decorator.py  monitor.py  patcher.py
