[tool.poetry]
name = "newrelic-bedrock-observability"
version = "0.1.0"
description = "A lightweight tool to monitor your AWS Bedrock workload."
authors = ["vnfmsqkek3 <vnfmsqkek3@github.com>"]
repository = "https://github.com/vnfmsqkek3/newrelic-bedrock-observability"
readme = "README.md"
keywords = ["newrelic", "observability", "aws", "bedrock", "monitor", "generative", "ai", "claude", "titan"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
newrelic-telemetry-sdk = "^0.4.0"
boto3 = ">=1.28.0"
botocore = ">=1.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
aioboto3 = "^11.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api" 